SERVER-5643 correct mongod keyfile documentation